fix the refreshing error

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row align-items-center py-1">
                 <!-- Left Section -->
                 <div class="col-md-6 col-8">
-                    <span class="welcome-text">Welcome to Clean Sri Lanka</span>
+                    <span class="welcome-text">welcome to Clean Sri Lanka</span>
                 </div>
                 <!-- Right Section -->
                 <div class="col-md-6 col-6 text-end d-flex align-items-center justify-content-end">
